Fixed responsive issue for mobile devices

--- a/styles.css
+++ b/styles.css
@@ -651,7 +651,7 @@ body {
     #themeController {
         display: none;
     }
-    .sources-container {
+    .our-project-container {
         top: 3.5em;
         left: 0
     }
