Added easing of theme color change

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
     position: fixed;
     top: 0;
     z-index: 9;
+    transition: all 0.25s ease-out;
 
     .red-theme & {
         background-color: rgba(198, 14, 59, 0.9)
@@ -81,6 +82,7 @@ body {
     margin: 0 1em 0 1.05em;
     color: rgb(198, 14, 59);
     font-size: 36px;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         color: rgb(9, 46, 110);
@@ -126,6 +128,7 @@ body {
     width: 30em;
     text-align: center;
     color: white;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background-color: rgba(9, 46, 110, 0.9);
@@ -218,6 +221,7 @@ body {
     width: 10em;
     right: -0.42em;
     background-color: rgba(198, 14, 59, 0.9);
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background-color: rgba(9, 46, 110, 0.9);
@@ -291,6 +295,7 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background: rgb(198, 14, 59);
@@ -317,6 +322,7 @@ body {
     align-items: center;
     background-color: rgba(9, 46, 110, 0.9);
     box-shadow: 0 0 2em rgb(69, 69, 69);
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background-color: rgba(198, 14, 59, 0.9);
@@ -377,6 +383,7 @@ body {
     transform: translateY(-3%);
     background: rgba(198, 14, 59, 0.7);
     box-shadow: 0 0 0.6em white;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background: rgba(9, 46, 110, 0.7)
@@ -410,6 +417,7 @@ body {
 .layer-2-bg {
     background-color: rgb(198, 14, 59);
     margin-top: 18em;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background-color: rgb(9, 46, 110);
@@ -426,6 +434,7 @@ body {
     color: rgb(9, 46, 110);
     margin: 0.5em 1em 1.5em 1em;
     font-family: "Montserrat", sans-serif;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         color:rgb(198, 14, 59);
@@ -479,6 +488,7 @@ body {
     margin: 1em 0 1em 0;
     font-family: "Montserrat", sans-serif;
     z-index: 2;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         color: rgb(198, 14, 59);
@@ -505,6 +515,7 @@ body {
     color: white;
     display: block;
     bottom: 5px;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background: rgb(198, 14, 59);
@@ -541,6 +552,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 2.5em 0;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background-color: rgb(119, 188, 31);
@@ -557,6 +569,7 @@ body {
     flex-direction: row;
     justify-content: space-evenly;
     margin: 0 2em;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background: rgb(198, 14, 59);
@@ -600,6 +613,7 @@ body {
     text-align: center;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background-color: rgb(9, 46, 110);
@@ -608,6 +622,7 @@ body {
 
 .layer-4-subscribe:hover {
     background-color: rgba(198, 14, 59, 0.9);
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background-color: rgba(9, 46, 110, 0.9);
@@ -622,6 +637,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    transition: all 0.15s ease-out;
 
     .red-theme & {
         background: rgb(198, 14, 59);
