--- a/styles.css
+++ b/styles.css
@@ -82,11 +82,8 @@ body {
     margin: 0 1em 0 1.05em;
     color: rgb(198, 14, 59);
     font-size: 36px;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
+
 
     .red-theme & {
         color: rgb(9, 46, 110);
@@ -132,11 +129,7 @@ body {
     width: 30em;
     text-align: center;
     color: white;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         background-color: rgba(9, 46, 110, 0.9);
@@ -229,11 +222,7 @@ body {
     width: 10em;
     right: -0.42em;
     background-color: rgba(198, 14, 59, 0.9);
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         background-color: rgba(9, 46, 110, 0.9);
@@ -307,11 +296,7 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         background: rgb(198, 14, 59);
@@ -338,11 +323,7 @@ body {
     align-items: center;
     background-color: rgba(9, 46, 110, 0.9);
     box-shadow: 0 0 2em rgb(69, 69, 69);
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         background-color: rgba(198, 14, 59, 0.9);
@@ -406,7 +387,7 @@ body {
     transition: all 0.15s ease-out;
 
     .red-theme & {
-        background: rgba(9, 46, 110, 0.7)
+        background: rgba(9, 46, 110, 0.7);
     }
 
 }
@@ -437,11 +418,7 @@ body {
 .layer-2-bg {
     background-color: rgb(198, 14, 59);
     margin-top: 18em;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         background-color: rgb(9, 46, 110);
@@ -458,14 +435,10 @@ body {
     color: rgb(9, 46, 110);
     margin: 0.5em 1em 1.5em 1em;
     font-family: "Montserrat", sans-serif;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
-        color:rgb(198, 14, 59);
+        color: rgb(198, 14, 59);
     }
 }
 
@@ -516,11 +489,7 @@ body {
     margin: 1em 0 1em 0;
     font-family: "Montserrat", sans-serif;
     z-index: 2;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         color: rgb(198, 14, 59);
@@ -547,11 +516,7 @@ body {
     color: white;
     display: block;
     bottom: 5px;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         background: rgb(198, 14, 59);
@@ -588,11 +553,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 2.5em 0;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         background-color: rgb(119, 188, 31);
@@ -609,11 +570,8 @@ body {
     flex-direction: row;
     justify-content: space-evenly;
     margin: 0 2em;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
+
 
     .red-theme & {
         background: rgb(198, 14, 59);
@@ -657,11 +615,7 @@ body {
     text-align: center;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         background-color: rgb(9, 46, 110);
@@ -670,11 +624,7 @@ body {
 
 .layer-4-subscribe:hover {
     background-color: rgba(198, 14, 59, 0.9);
-<<<<<<< HEAD
-    transition: all 0.15s ease-out;
-=======
     transition: all 0.25s ease-out;
->>>>>>> f40f3c667c732a89e6cafb6645b6b8f246c1aabe
 
     .red-theme & {
         background-color: rgba(9, 46, 110, 0.9);
